@@ -13,6 +13,8 @@
 
 package com.c4_soft.springaddons.samples.webmvc_jwtauthenticationtoken_jpa_authorities;
 
+import java.util.stream.Collectors;
+
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.oauth2.core.oidc.StandardClaimNames;
@@ -29,11 +31,10 @@ public class MessageService {
 
 	@PreAuthorize("authenticated")
 	public String greet(JwtAuthenticationToken who) {
-		return String
-				.format(
-						"Hello %s! You are granted with %s.",
-						who.getToken().getClaimAsString(StandardClaimNames.PREFERRED_USERNAME),
-						who.getAuthorities().stream().map(GrantedAuthority::getAuthority).toList());
+		return String.format(
+				"Hello %s! You are granted with %s.",
+				who.getToken().getClaimAsString(StandardClaimNames.PREFERRED_USERNAME),
+				who.getAuthorities().stream().map(GrantedAuthority::getAuthority).collect(Collectors.toList()));
 	}
 
 }
