@@ -1,5 +1,7 @@
 package com.c4_soft.springaddons.samples.webmvc_keycloakauthenticationtoken;
 
+import java.util.stream.Collectors;
+
 import org.keycloak.adapters.springsecurity.token.KeycloakAuthenticationToken;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.stereotype.Service;
@@ -15,7 +17,7 @@ public class MessageService {
 		return String.format(
 				"Hello %s! You are granted with %s.",
 				who.getAccount().getKeycloakSecurityContext().getToken().getPreferredUsername(),
-				who.getAuthorities().stream().map(GrantedAuthority::getAuthority).toList());
+				who.getAuthorities().stream().map(GrantedAuthority::getAuthority).collect(Collectors.toList()));
 	}
 
 }
