@@ -13,27 +13,35 @@
 
 package com.c4_soft.springaddons.samples.webmvc_oidcauthentication;
 
+import java.util.stream.Collectors;
+
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import com.c4_soft.springaddons.security.oauth2.OAuthentication;
 import com.c4_soft.springaddons.security.oauth2.OpenidClaimSet;
 
+import lombok.RequiredArgsConstructor;
+
 @Service
+@RequiredArgsConstructor
 public class MessageService {
+	private final SecretRepo fooRepo;
 
 	@PreAuthorize("hasRole('AUTHORIZED_PERSONNEL')")
 	public String getSecret() {
-		return "Secret message";
+		final OpenidClaimSet claims = (OpenidClaimSet) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+		return fooRepo.findSecretByUsername(claims.getPreferredUsername());
 	}
 
-	@PreAuthorize("authenticated")
+	@PreAuthorize("isAuthenticated()")
 	public String greet(OAuthentication<OpenidClaimSet> who) {
 		return String.format(
 				"Hello %s! You are granted with %s.",
 				who.getAttributes().getPreferredUsername(),
-				who.getAuthorities().stream().map(GrantedAuthority::getAuthority).toList());
+				who.getAuthorities().stream().map(GrantedAuthority::getAuthority).collect(Collectors.toList()));
 	}
 
 }
